[gd_scene load_steps=8 format=3 uid="uid://c1x7ijb0evwab"]

[ext_resource type="Texture2D" uid="uid://fko1qa2hrega" path="res://assets/sprites/player/Player.png" id="1_o6ghu"]
[ext_resource type="Script" uid="uid://dkrp6osocr0la" path="res://src/player/Player.gd" id="1_sllil"]
[ext_resource type="Script" uid="uid://ccv3m2g8be0hh" path="res://src/controllers/weapons/bullet/BulletAttackComponent.gd" id="3_1fx2d"]
[ext_resource type="PackedScene" uid="uid://b5sbbfmswa7v5" path="res://objects/weapons/bullet/bullet.tscn" id="4_6o7ef"]
[ext_resource type="Script" uid="uid://b7vstqbp4dspa" path="res://src/personas/DamagableComponent.gd" id="5_h7ooo"]

[sub_resource type="CircleShape2D" id="CircleShape2D_sllil"]
radius = 16.0312

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_h7ooo"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2

[node name="Player" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 129
script = ExtResource("1_sllil")

[node name="PlayerSprite" type="Sprite2D" parent="."]
unique_name_in_owner = true
texture = ExtResource("1_o6ghu")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_sllil")

[node name="BulletController" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_1fx2d")
bullet_scene = ExtResource("4_6o7ef")
cooldown = 0.1

[node name="Camera2D" type="Camera2D" parent="."]

[node name="DamagableComponent" type="Node" parent="." node_paths=PackedStringArray("area")]
unique_name_in_owner = true
script = ExtResource("5_h7ooo")
hp = 100.0
area = NodePath("..")
metadata/_custom_type_script = "uid://b7vstqbp4dspa"

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_h7ooo")

[connection signal="death" from="DamagableComponent" to="." method="_on_damagable_component_death"]
[connection signal="took_damage" from="DamagableComponent" to="." method="_on_damagable_component_took_damage"]
